Updated images and video.html

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <section id="photos">
         <h2>Our Memories</h2>
         <div class="photos">
-            <img src="image1.jpg" alt="Memory 1">
-            <img src="image2.jpg" alt="Memory 2">
-            <img src="image3.jpg" alt="Memory 3">
+            <img src="IMG_20240407_193738.jpg" alt="Memory 1">
+            <img src="IMG_20240407_132749_HDR.jpg" alt="Memory 2">
+            <img src="IMG_20240203_202414.jpg" alt="Memory 3">
         </div>
     </section>
     
     <section id="song">
         <h2>Our Song</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/hfM8IQfJXwU" title="Akasham Pole - Bhishmaparvam" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/HYrFYulslb8?si=VxpKWDKlEmgZGgKi" frameborder="0" allowfullscreen></iframe>
     </section>
     
     <script src="script.js"></script>
